male content images great again

--- a/TheExpanseRPG/WPFStringResources.resx
+++ b/TheExpanseRPG/WPFStringResources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AvatarFolderPath" xml:space="preserve">
-    <value>\Images\CharacterProfiles\</value>
+    <value>Images\CharacterProfiles\</value>
   </data>
   <data name="PopupCharacterNameConflictConfirm" xml:space="preserve">
     <value>A Character with this name already exists. You will overwrite it if you continue. Are you sure?</value>
